--- a/docs/todo/2026-02-26.md
+++ b/docs/todo/2026-02-26.md
@@ -90,3 +90,110 @@
 - ⬜ 채팅 블로킹 이슈 — D-2 동시 명령(명령 큐)으로 해결 예정
 - ⬜ Soul Gym Dry Run 테스트
 - ⬜ 즉시분석 재테스트 (스트리밍 수정 빌드#598 이후)
+
+---
+
+## 🔴 Phase 6 — 대표님 2026-02-26 검수 33개 항목 (새 세션)
+
+> 맥락: Phase 3에서 완료 표시됐으나 여전히 불완전한 항목 재확인 + 신규 항목 추가
+> 모두 새 워크트리에서 작업 예정 (`claude/phase6-ux` or 항목별 분리)
+
+### 🔴 신규 미구현 (처음 나온 것)
+
+- ⬜ **N-1: 도구 API/LLM 분류 전수** — 131개 도구를 ① 실제 외부API 연결 ② LLM 지식만 사용(교수급) ③ 스텁(미구현) 3가지로 분류. 분류 결과 표로 대표님 보고 후 불필요한 것 정리. (맥락: 에이전트가 실제로 외부 데이터를 가져오는지, 아니면 Claude 뇌에서 꺼내는지 구분이 안 됨)
+- ⬜ **N-2: 넥서스 mermaid 화이트보드** — 현재 Drawflow 노드 에디터만 있음. 대표님이 원하시는 것: 자유 그림(손그림 캔버스) → AI가 의도 파악 → mermaid 코드 생성 → 다이어그램으로 렌더링 + 채팅 연동. 기술 조사 후 구현 가능 여부 + 방식 대표님 보고 후 착수. (맥락: 칠판에 그림 그리면 AI가 플로우차트로 그려주는 기능)
+- ⬜ **N-3: 정보국 드래그앤드롭 파일 업로드** — 현재 클릭-선택만 가능. 드래그앤드롭 영역 추가. (맥락: 파일을 끌어서 놓는 방식으로 업로드)
+- ⬜ **N-4: 진화시스템 웹 실시간 로그** — 현재 텔레그램으로만 알림. 더보기 내 특정 탭(또는 통신로그)에 SSE 실시간 진화시스템 로그 표시. 시:분 표시 포함. 텔레그램 알림은 선택적으로 ON/OFF. (맥락: 하루종일 폰 울림)
+- ⬜ **N-5: 피드백 모드 피그마급 재구현** — 현재 `prompt()` 브라우저 기본 팝업 사용. 피그마처럼: 클릭 위치에 말풍선 핀 생성 → 커스텀 텍스트 입력창 표시 → 저장 → 내가(Claude) `/api/feedback/ui`에서 실시간 확인 가능. 전체/선택 삭제 기능 포함. (맥락: 스크린샷 찍어서 주기 싫음)
+- ⬜ **N-6: 작전현황(home) vs 대시보드 재설계** — 현재 home 탭 = 지휘소 내 첫 탭, 대시보드 = 별도 viewMode. 차이가 불명확. 통합 또는 역할 명확히 분리 후 대표님 보고. (맥락: 둘이 같은 건지 다른 건지 모름)
+- ⬜ **N-7: 왼쪽 바 대개편** — flat TEAM 구조는 완료됐지만 도구 수(131개) 실시간 반영 + 도구 분류(N-1) 후 카테고리별 표시 재설계. (맥락: org tree 개편 + 도구 수 확인)
+- ⬜ **N-8: 아고라 독립 viewMode 전환** — 현재 switchTab('agora')로 지휘소 탭 중 하나. 사무실/대시보드처럼 독립 viewMode로 분리. 상단 토글 버튼: 지휘소→사무실→대시보드→아고라→넥서스. (맥락: 아고라 누르면 안 없어짐)
+- ⬜ **N-9: 보고서 ID 시스템 고도화** — task_id 표시는 완료. 단 비서실장 QA 반려 시 특정 섹션 ID 지정 → 해당 섹션만 재작성 → 동일 보고서 ID에 새 버전으로 연결. 전 직원 공통. (맥락: 반려할때 어느 부분인지 특정하고, 그 부분만 다시 보고)
+- ⬜ **N-10: 모바일 전면개편** — 하단 네비 순서 동기화는 완료. 전체 탭 내용의 모바일 최적화는 미완료. 탭별 레이아웃 전수 확인 + 개선. (맥락: 하나하나 지적하기 힘듦, 전수검수 요청)
+- ⬜ **N-11: 통신로그 + 전략실 로그 UX 전면 개편** — 글씨 크기 조정은 완료. 정보 위계/레이아웃/시각화는 미완료. 최신 로그 뷰어 레퍼런스 분석 후 설계. (맥락: UX UI 디자인 전면 개편)
+
+### 🔄 완료 표시됐으나 재확인 필요
+
+- 🔄 **R-1: 대화 비우기 목록 제거** — A-2 ✅ 완료로 표시. 코드상 즉시 filter 처리. 대표님이 여전히 남는다고 하심 → 실제 서버에서 재현 테스트 필요. (맥락: 비웠는데 목록에 남음)
+- 🔄 **R-2: 작전일지 제목 요약** — C-2 ✅ 완료로 표시. 현재 실제로 제목만 표시되는지 배포 확인 필요. (맥락: 내 명령 전부가 들어감)
+- 🔄 **R-3: 전력분석 데이터 업데이트** — C-3 ✅ 버튼 추가. 단 tasks 테이블이 실제로 채워지는지 확인 필요 → 에이전트 실행 시 DB 기록 여부 점검. (맥락: 전혀 업데이트되고 있지 않음)
+- 🔄 **R-4: 통신국 .env 오류** — D-3 ✅ 완료로 표시. 그러나 대표님이 여전히 .env 없다고 뜬다고 하심 → 실제 연결 상태 API 응답 확인 + GitHub Secrets 반영 여부 점검. (맥락: api 있는것도 .env 없다고 뜨고 난리)
+- 🔄 **R-5: 동시 명령 실행** — D-2 ✅ 완료로 표시. 실제로 명령 2개 동시 전송 시 큐 처리되는지 서버에서 확인. (맥락: 실시간으로 명령 하나밖에 못함)
+- 🔄 **R-6: 장기기억 UI 접근성** — C-8 ✅ 완료 (memoryModal 존재). 그러나 전력분석 탭에서 팀장 카드를 클릭해야 열림 → UX가 불명확. 클릭 영역 명시적 표시 + 안내 문구 추가. (맥락: 어디서 봐? 모름)
+
+### ✅ 검증 완료 (코드 확인으로 실제 완료 확인)
+
+- ✅ 삭제 팝업 커스텀 모달 (window.confirm 0개 확인)
+- ✅ 기밀문서 필터 부서만 유지
+- ✅ CYO 잔재 HTML에서 0건 확인
+- ✅ 더보기 순서: 전력분석/자동화/크론기지/통신국/정보국
+- ✅ 관심종목 시장별 전체선택
+- ✅ 전략실 '활동로그'→'교신로그' (코드 확인)
+- ✅ 전략실 매매전략 탭 (탭 목록에 없음 확인)
+- ✅ 기밀문서 목록 에이전트 이름 표시
+- ✅ 뷰모드 순서: 지휘소→사무실→대시보드→AGORA→NEXUS (코드 확인)
+- ✅ 상단 탭 순서: 작전현황→사령관실→전략실→통신로그→작전일지→기밀문서
+- ✅ '채팅'→'지휘소' 변경 (코드 확인)
+
+### 우선순위 (권고 순서)
+
+| 우선 | 항목 | 이유 |
+|-----|------|------|
+| 🔴 즉시 | R-1, R-3, R-4 | 대표님이 직접 문제 확인하신 것 |
+| 🟠 이번 주 | N-4(텔레그램 진화로그), N-5(피드백 모드), R-6(장기기억 UX) | 매일 불편 체감 |
+| 🟡 다음 | N-1(도구분류), N-7(왼쪽바), N-8(아고라), N-6(작전현황/대시보드) | 구조 설계 필요 |
+| 🔵 설계 후 | N-2(넥서스 mermaid), N-9(ID시스템), N-10(모바일), N-11(로그UX) | 대형 작업 |
+
+---
+
+## ⬜ Instagram Meta 앱 설정 (SNS 연동 선행 작업)
+
+> 맥락: 인스타그램 콘텐츠 게시 API 연동을 위해 Meta 개발자 포털에서 수동으로 해야 할 작업. 비즈니스 인증 검토 중(1주일 경과) + 이용 사례가 광고 API로 잘못 설정됨.
+
+### Part A: 인스타그램 이용 사례 추가 (5분)
+
+**1단계.** `developers.facebook.com` 접속 → 오른쪽 상단 **"내 앱"** 클릭 → **Corthex-Hq** 클릭
+
+**2단계.** 왼쪽 메뉴에서 **"이용 사례"** 클릭
+(영어면 "Use cases")
+
+**3단계.** 오른쪽에 **"이용 사례 추가"** 파란 버튼 클릭
+
+**4단계.** 검색창에 `Instagram content` 입력
+→ **"Instagram 콘텐츠 게시"** (Instagram content publishing) 선택
+→ **"추가"** 클릭
+
+**5단계.** 추가된 이용 사례 옆 **"설정"** 클릭
+→ **권한** 탭에서 아래 2개 **"추가"** 버튼 클릭:
+- `instagram_business_basic`
+- `instagram_content_publish`
+
+---
+
+### Part B: 액세스 토큰 발급 (10분)
+
+**1단계.** 같은 페이지 왼쪽 메뉴 → **"도구"** → **"그래프 API 탐색기"** 클릭
+(영어면 "Graph API Explorer")
+
+**2단계.** 오른쪽 상단 드롭다운에서 **"Corthex-Hq"** 선택되어 있는지 확인
+
+**3단계.** **"사용자 또는 페이지 액세스 토큰 생성"** 클릭
+→ 팝업에서 아래 권한 체크:
+- ✅ `instagram_business_basic`
+- ✅ `instagram_content_publish`
+- ✅ `pages_read_engagement`
+
+**4단계.** **"토큰 생성"** 클릭 → 본인 계정으로 로그인 → 승인
+
+**5단계.** 화면에 나타난 긴 토큰 값 전체 복사
+
+---
+
+### Part C: 토큰 GitHub Secrets 등록 (2분)
+
+GitHub → CORTHEX_HQ 저장소 → **Settings** → **Secrets and variables** → **Actions**
+→ **"New repository secret"**:
+- Name: `INSTAGRAM_ACCESS_TOKEN`
+- Value: 복사한 토큰 붙여넣기
+
+> 완료 후 Claude에게 말하면 코드 연결 + 발행 테스트까지 진행.
