--- a/docs/todo/2026-02-28.md
+++ b/docs/todo/2026-02-28.md
@@ -88,6 +88,8 @@
 - ✅ 프론트엔드: "변환하기" → "저장하기", SSE 구독(`_connectSketchVibeSSE`), 실시간 Mermaid 렌더링
 - ✅ 팔레트 버그 수정: `querySelectorAll` + 보이는 요소 선택 (동일 ID 대응) + 노드 랜덤 위치
 - ✅ API 비용 표시 제거 ($0.0079 등)
+- ✅ NEXUS 분할뷰 + 시스템플로우 삭제: HTML 151줄 제거, 모드버튼 삭제, 캔버스 모드만 유지
+- ✅ `nexus-canvas` ID 유일화 → 팔레트 버그 완전 해결
 
 ## Instagram 자동 발행 기능 추가
 - ✅ `src/tools/sns/instagram_publisher.py` — OAuth 의존 제거, 환경변수 토큰(`INSTAGRAM_ACCESS_TOKEN`) 직접 사용으로 전환
