docs: 빌드#706 문서 갱신 — SNS 퍼블리셔 수정 + 미디어 썸네일

--- a/docs/todo/2026-02-28.md
+++ b/docs/todo/2026-02-28.md
@@ -115,6 +115,15 @@
   - SNS 발행용 `media_urls` 리스트 자동 출력
 - ✅ `tools.yaml/json` — card_news_series action + slide_count/slides_text 파라미터 문서화
 
+## SNS 퍼블리셔 전면 수정 (빌드 #704~#706)
+- ✅ venv selenium 미설치 → 수동 설치+서버 재시작 (TistoryPublisher/DaumCafePublisher 복원)
+- ✅ CMO allowed_tools에 gemini_image_generator/gemini_video_generator 추가 (빌드 #704)
+- ✅ tools.yaml/json — sns_manager 스키마에 media_urls/extra/category/visibility 추가 (빌드 #705)
+- ✅ instagram_publisher.py — 이미지에도 _wait_for_processing + 발행 3회 재시도 (빌드 #706)
+- ✅ tistory_publisher.py — 10개 CSS 셀렉터 + JS 폴백 + 디버그 로깅 (빌드 #706)
+- ✅ media_handler.py — 썸네일 API (/api/media/thumbs/) 추가, 원본 1.1MB→13KB (빌드 #706)
+- ✅ index.html — 미디어 갤러리 img.thumb 우선 로딩
+
 ## SNS 웹 승인+자동발행 구현
 - ✅ `web/handlers/sns_handler.py` — `approve_sns()` 수정: 승인 후 `_auto_publish_after_approve()` 백그라운드 태스크 자동 실행
 - ✅ `_get_publisher()` 헬퍼 추출 — 6개 플랫폼 퍼블리셔 인스턴스 생성 공통화
