--- a/docs/todo/2026-03-02.md
+++ b/docs/todo/2026-03-02.md
@@ -37,3 +37,25 @@
 2. **사무실 뷰 하드코딩** → "CORTHEX STAFF 팀장 6명" 삭제 → workspace.officeLayout x-for 동적 렌더링
 3. **로그아웃 버튼 안 보임** → bootstrapMode 조건 제거 → auth.token만 확인
 4. **전력분석 시체 에이전트** → loadPerformance/loadGymHistory에서 agentNames에 없는 구 ID 필터 아웃
+
+## ✅ v5.2 워크스페이스 격리 + CLAUDE.md 재구축 (PR #732~#734, 빌드 #773~#776)
+
+### 버그 수정 3건 (빌드 #773)
+1. **workspace-profile 404 근본 수정** — 토큰 없으면 initWorkspace 스킵 + viewer 폴백 프로파일 반환
+2. **사이드바 에이전트 안 보임** — sidebarFilter 기본값 문제 → viewer 프로파일(빈 sidebarFilter)로 해결
+3. **$204.86 누나 대시보드 노출** — /api/dashboard에 orgScope 필터 추가 → sister는 자신의 에이전트 비용만
+
+### showSections 탭 격리 (빌드 #775)
+- workspaces.yaml: ceo=[] (전체 탭), sister=[home, command, performance] (3개만)
+- corthex-app.js: getPrimaryTabs/getSecondaryTabs에 _tabAllowed() 필터 추가
+
+### CLAUDE.md 모범사례 재구축 (빌드 #775, 공식 Claude Code best practices 기반)
+- CLAUDE.md: @import 문법 추가 (claude-rules 3개 자동 로드), 자율 실행 모드 섹션
+- .claude/agents/log-analyzer.md: 로그 분석 전문 에이전트 (Haiku)
+- .claude/agents/security-reviewer.md: 보안 규칙 위반 감지 에이전트 (Sonnet)
+- .claude/rules/frontend.md: 프론트엔드 경로별 자동 적용 규칙
+- .claude/rules/backend.md: 백엔드 경로별 자동 적용 규칙
+
+### get_auth_org 핫픽스 (빌드 #776)
+- arm_server.py: get_auth_org import 추가
+- config/workspaces.yaml: viewer showSections: [] 추가
