docs: v5.3 완료 기록 — 탭 숨기기 폐기 + 네이버 모델 완전 구현 (빌드 #779)

--- a/docs/todo/2026-03-02.md
+++ b/docs/todo/2026-03-02.md
@@ -59,3 +59,15 @@
 ### get_auth_org 핫픽스 (빌드 #776)
 - arm_server.py: get_auth_org import 추가
 - config/workspaces.yaml: viewer showSections: [] 추가
+
+## ✅ v5.3 탭 숨기기 전면 폐기 — 네이버 모델 완전 구현 (PR #737, 빌드 #779)
+
+showSections/allowedDivisions가 탭 숨기기이므로 네이버 모델 위반 → 전면 제거
+
+1. **workspaces.yaml**: showSections, allowedDivisions 모든 워크스페이스에서 제거
+2. **corthex-app.js**: _tabAllowed() 함수 제거, getPrimaryTabs/getSecondaryTabs 전체 탭 반환
+3. **index.html**: 기밀문서 division 버튼 x-show 조건 모두 제거 → 전부 표시
+4. **loadArchive()**: orgScope + filterDivision 함께 API 전달 (이전엔 filterDivision 누락)
+5. **arm_server.py**: viewer 폴백에서 allowedDivisions 제거
+6. **CLAUDE.md**: 탭 숨기기 금지(v5.3) 절대 규칙 추가
+7. **architecture.md**: ADR-7 + Frontend 표 업데이트 — 탭숨김→빈상태표시
